Start attempting read-replica testing with one cluster running at a time
Change-Id: Icf7a3ff06926aede9a002817aed9672610942c7e